; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/util/extr_socketfifo.c_SOCKETFIFO_Flush.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/util/extr_socketfifo.c_SOCKETFIFO_Flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SOCKETFIFO_Flush() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  br label %2

2:                                                ; preds = %13, %0
  %3 = call i64 @SOCKETFIFO_Pop(%struct.TYPE_3__* %1)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %14

5:                                                ; preds = %2
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %5
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @mem_Free(i32 %11)
  br label %13

13:                                               ; preds = %9, %5
  br label %2

14:                                               ; preds = %2
  ret void
}

declare dso_local i64 @SOCKETFIFO_Pop(%struct.TYPE_3__*) #1

declare dso_local i32 @mem_Free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
